@@ -2,18 +2,17 @@ import org.springframework.boot.gradle.tasks.bundling.BootBuildImage
 
 plugins {
     java
-
-    // https://docs.spring.io/spring-boot/docs/3.2.5/gradle-plugin/reference/htmlsingle/#managing-dependencies.dependency-management-plugin
-    id("org.springframework.boot") version "3.3.2"
+    // https://docs.spring.io/spring-boot/gradle-plugin/managing-dependencies.html
+    id("org.springframework.boot") version "3.4.1"
     id("io.spring.dependency-management") version "1.1.6"
 
-    // helper IntelliJ IDE plugin used on last line.
-    idea
+    id("org.flywaydb.flyway") version "11.1.0"
+
+    idea // helper IntelliJ IDE plugin used on last line.
 }
 
 group = "org.aamini"
-
-// Hardcode version if not specified through CLI while running in CI.
+// Hardcode version if not specified.
 if (project.version == "unspecified" || project.version.toString().isBlank()) {
     version = "0.0.1-SNAPSHOT"
 }
@@ -43,27 +42,56 @@ val integrationTestRuntimeOnly: Configuration by configurations.getting {
     extendsFrom(configurations.testRuntimeOnly.get())
 }
 
+
+buildscript {
+    dependencies {
+        classpath("org.flywaydb:flyway-database-postgresql:11.1.0")
+    }
+}
+
 dependencies {
     implementation("org.springframework.boot:spring-boot-starter-web")
     implementation("org.springframework.boot:spring-boot-starter-log4j2")
     implementation("org.springframework.boot:spring-boot-starter-jdbc")
-    implementation("org.postgresql:postgresql:42.7.3")
+    implementation("org.postgresql:postgresql")
+    // Replace the default spring logger.
+    // https://docs.spring.io/spring-boot/how-to/logging.html#howto.logging.log4j
+    configurations {
+        all {
+            exclude("org.springframework.boot", "spring-boot-starter-logging")
+        }
+    }
 
-    testImplementation("org.junit.jupiter:junit-jupiter:5.10.3")
-    testRuntimeOnly("org.junit.platform:junit-platform-launcher:1.10.3")
+    // Testing libraries
+    testImplementation("org.junit.jupiter:junit-jupiter")
+    testRuntimeOnly("org.junit.platform:junit-platform-launcher")
 
     integrationTestImplementation("org.springframework.boot:spring-boot-starter-test")
+    integrationTestImplementation("org.testcontainers:junit-jupiter")
+    integrationTestImplementation("org.testcontainers:postgresql")
+    integrationTestImplementation("org.flywaydb:flyway-database-postgresql:11.1.0")
+
+    // Used to resolve large security warning. Delete later (Written: 12/22/24)
+    implementation("org.apache.commons:commons-compress:1.26.0")
 }
 
-// Exclude the default spring-boot-starter-logging library since we include log4j2
-configurations {
-    all {
-        exclude("org.springframework.boot", "spring-boot-starter-logging")
+// Build final app image (OCI).
+// https://docs.spring.io/spring-boot/gradle-plugin/packaging-oci-image.html#build-image.examples.publish
+tasks.named<BootBuildImage>("bootBuildImage") {
+    docker {
+        publishRegistry {
+            url = System.getenv("CI_REGISTRY")
+            username = System.getenv("CI_REGISTRY_USER")
+            password = System.getenv("CI_JOB_TOKEN")
+        }
     }
 }
 
+// ============================= Testing Setup =================================
 tasks.withType<Test> {
     useJUnitPlatform()
+    // Hide warning (https://stackoverflow.com/a/78188896)
+    jvmArgs("-XX:+EnableDynamicAgentLoading", "-Xshare:off")
 }
 
 val integrationTest = tasks.register<Test>("integrationTest") {
@@ -79,21 +107,22 @@ val integrationTest = tasks.register<Test>("integrationTest") {
 
 tasks.check { dependsOn(integrationTest) }
 
-// https://docs.spring.io/spring-boot/docs/3.2.7/gradle-plugin/reference/htmlsingle/#build-image.examples.publish
-tasks.named<BootBuildImage>("bootBuildImage") {
-    docker {
-        builderRegistry {
-            url = "registry.gitlab.com/imdbgraph/imdbgraph-api"
-            username = System.getenv("CI_REGISTRY_USER")
-            password = System.getenv("CI_REGISTRY_PASSWORD")
-        }
-    }
-}
-
-// Marks the integrationTest folder green color for testing.
-// https://docs.gradle.org/current/userguide/idea_plugin.html#sec:idea_identify_additional_source_sets
 idea {
     module {
+        // Fixes bug in IntelliJ where integrationTest library isn't green.
+        // https://docs.gradle.org/userguide/idea_plugin.html#sec:idea_identify_additional_source_sets
         testSources.from(sourceSets["integrationTest"].java.srcDirs)
     }
+}
+// =============================================================================
+
+// Used to set up Flyway commands that developers can run through gradle. These
+// CLI commands let you use commands like migrate, clean, info, etc to test any
+// new Flyway scripts being worked on.
+flyway {
+    // Enter your database info below:
+    url = "jdbc:postgresql://localhost:5432/postgres"
+    user = "postgres"
+    password = "YOUR_PASSWORD"
+    locations = arrayOf("classpath:db/migration")
 }
